# anti-cheat-with-cpp

./: .gitignore  CMakeLists.txt  README.md  anti-cheat-with-cpp.sln  anti-cheat-with-cpp.vcxproj  anti-cheat-with-cpp.vcxproj.filters  app.cpp  app.h  error.h  main.cpp
anti-che.e189a2ae/x64/Debug/: anti-cheat-with-cpp.exe.recipe  anti-cheat-with-cpp.ilk  anti-cheat-with-cpp.vcxproj.FileListAbsolute.txt  monitor_interface.h_FBCD01AD8498183F.ifc.dt.d.json  monitor_interface.h_FBCD01AD8498183F.ifc.dt.module.json  monitor_interface.h_FBCD01AD8498183F.ifc.dt.module.json.command  vc143.idb
anti-che.e189a2ae/x64/Debug/anti-che.e189a2ae.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  anti-cheat-with-cpp.lastbuildstate  anti-cheat-with-cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/: process_blacklist.json
commons/: windows_common.cpp  windows_common.h
cui/: cui_manager.cpp  cui_manager.h  manager.cpp
docs/: git-commit-template.txt
monitor/: monitor_factory.cpp  monitor_factory.h  monitor_interface.h
monitor/process_montitor/: process_info.h  process_matcher.cpp  process_matcher.h  process_monitor.cpp  process_monitor.h  process_scanner.cpp  process_scanner.h
ruleset/: signature_set.cpp  signature_set.h
runtime/: error.h  interface.h  launcher.cpp  launcher.h  manager.cpp  manager.h  runtime_factory.cpp  runtime_factory.h  runtime_interface.h  runtime_manager.cpp  runtime_manager.h  windows.h
signatures/: process_signature.cpp  process_signature.h  signature_interface.h
src/app/: CMakeLists.txt  manager.cpp  manager.h
src/common/: CMakeLists.txt  status_macros.h
src/main/: CMakeLists.txt  main.cpp
src/platform/: CMakeLists.txt
src/platform/windows/common/: CMakeLists.txt  handle_wrapper.h  handle_wrapper.inl  handle_wrapper_test.cpp
src/platform/windows/process/: CMakeLists.txt  controller.cpp  controller.h
src/signature/: CMakeLists.txt  interface.h  process.cpp  process.h  store.cpp  store.h
